# f1tenth_car_ws

./: .gitignore  README.md  mpc_execplan.md
docs/: GIT_MANAGEMENT.md  battle_algorithm_architecture.md
src/car_controller/simple_mpc/scripts/: mpc_node.py
src/car_hardware/f1tenth_system/f1tenth_stack/: package.xml  setup.py
src/car_hardware/f1tenth_system/f1tenth_stack/config/: f1tenth_online_async.yaml  joy_teleop.yaml  vesc.yaml
src/car_hardware/f1tenth_system/f1tenth_stack/f1tenth_stack/: wall_following.py
src/car_hardware/f1tenth_system/f1tenth_stack/launch/: bringup_launch.py
src/car_hardware/f1tenth_system/vesc/vesc_ackermann/src/: vesc_to_odom.cpp
src/car_hardware/livox_ros_driver2/src/config/: display_point_cloud.rviz
src/car_hardware/livox_ros_driver2/src/launch/: msg_MID360_launch.py
src/car_localization/FAST_LIO/config/: mid360.yaml
src/car_localization/FAST_LIO/maps/: szu_racetrack.pgm  szu_racetrack.yaml
src/car_localization/FAST_LIO/src/: preprocess.h
src/car_localization/lidarslam_ros2/graph_based_slam/: CMakeLists.txt
src/car_localization/lidarslam_ros2/lidarslam/: CMakeLists.txt
src/car_localization/lidarslam_ros2/scanmatcher/include/scanmatcher/: scanmatcher_component.h
src/car_localization/pcd2pgm/config/: pcd2pgm.yaml
src/car_localization/pcd2pgm/include/pcd2pgm/: pcd2pgm.hpp
src/car_localization/pcd2pgm/src/: pcd2pgm.cpp
src/car_localization/waypoint_generator/src/: waypoint_generator.cpp
src/car_navigation/f1tenth_nav2/: CMakeLists.txt  package.xml
src/car_navigation/f1tenth_nav2/maps/: 8floor_all_map.pgm  8floor_all_map.yaml  8floor_map.pgm  8floor_map.yaml  my_lab_map.pgm  my_lab_map.yaml  new_map.pgm  new_map.yaml  racetrack.pgm  racetrack.yaml
src/car_navigation/reactive_racing/: package.xml  setup.cfg  setup.py
src/car_navigation/reactive_racing/config/: reactive_racing.yaml
src/car_navigation/reactive_racing/launch/: reactive_racing.launch.py
src/car_navigation/reactive_racing/reactive_racing/: reactive_racing_node.py
src/car_navigation/roboracer_china_2025/: package.xml  setup.py
src/car_navigation/roboracer_china_2025/launch/: battle_fast2.launch.py
src/car_navigation/roboracer_china_2025/roboracer_china_2025/: battle_fast2_node.py
src/car_navigation/wall_follow_pid_cpp/: CMakeLists.txt  package.xml
src/car_navigation/wall_follow_pid_cpp/launch/: wall_follow_pid.launch.py
src/car_navigation/wall_follow_pid_cpp/src/: wall_follow_pid_node.cpp
src/car_perception/pointcloud_to_laserscan/: package.xml
src/car_perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/car_perception/twist_to_ackermann/twist_to_ackermann/: twist_to_ackermann_node.py
