<?xml version="1.0"?>
<package format="3">
  <name>wall_follow_pid_cpp</name>
  <version>0.0.1</version>
  <description>Wall following controller with PID steering for Ackermann vehicles (ROS 2).</description>
  <maintainer email="user@example.com">Auto Generated</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>